# stack-tavern-api

./: .env.example  .sqllsrc.json  Cargo.toml  README.md  docker-compose.yml  makefile  sqlx-data.json
migrations/: 20230619173737_initial.sql
src/: auth.rs  db.rs  main.rs  models.rs  schemas.rs
src/models/: mod.rs  stack.rs  technology.rs  user.rs
src/routers/: mod.rs  stacks.rs  technologies.rs  users.rs
src/tests/: fixtures.rs
