[package]
name = "stack-tavern-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
openidconnect = { version = "3.2.0", default-features = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "offline",
  "uuid",
] }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util"] }


[dev-dependencies]
rstest = "0.17.0"
